--- a/Pandas/pandas.ipynb
+++ b/Pandas/pandas.ipynb
@@ -37,11 +37,11 @@
         "!git clone https://github.com/jkhansell/sc_notebooks"
       ],
       "metadata": {
-        "id": "LrUGkQ4KWUlt",
-        "outputId": "40e95ee8-9016-4124-e414-3d15119c531b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LrUGkQ4KWUlt",
+        "outputId": "40e95ee8-9016-4124-e414-3d15119c531b"
       },
       "execution_count": 3,
       "outputs": [
@@ -1069,7 +1069,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesSN = pd.read_csv('pacientesCorazonSN.csv', names=nombres_columnas)\n",
+        "datosPacientesSN = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazonSN.csv', names=nombres_columnas)\n",
         "datosPacientesSN"
       ]
     },
@@ -1090,7 +1090,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesPC = pd.read_csv('pacientesCorazonPC.csv') #Los datos no se leerán correctamente\n",
+        "datosPacientesPC = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazonPC.csv') #Los datos no se leerán correctamente\n",
         "datosPacientesPC"
       ]
     },
@@ -1102,7 +1102,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesPC = pd.read_csv('pacientesCorazonPC.csv',delimiter=';') #Los datos sí se leerán correctamente\n",
+        "datosPacientesPC = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazonPC.csv',delimiter=';') #Los datos sí se leerán correctamente\n",
         "datosPacientesPC"
       ]
     },
@@ -1124,7 +1124,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesSN = pd.read_csv('pacientesCorazon.csv',header= None)\n",
+        "datosPacientesSN = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazon.csv',header= None)\n",
         "datosPacientesSN"
       ]
     },
@@ -1156,7 +1156,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesSN = pd.read_csv('pacientesCorazon.csv',header=None,skiprows=1)\n",
+        "datosPacientesSN = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazon.csv',header=None,skiprows=1)\n",
         "datosPacientesSN"
       ]
     },
@@ -1491,12 +1491,12 @@
       "outputs": [],
       "source": [
         "import pandas as pd\n",
-        "datosPacientes = pd.read_csv('pacientesCorazon.csv')\n",
+        "datosPacientes = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazon.csv')\n",
         "datosPacientes\n",
         "\n",
         "datosPacientes.columns = ['edad', 'sexo', 'tipoDolor', 'presionReposo', 'colesterolSerico','azucarAyunas', 'latidosMax','presencia']\n",
         "\n",
-        "nuevosPacientes = pd.read_csv('nuevosPacientes.csv') #Base de datos con nuevos pacientes\n",
+        "nuevosPacientes = pd.read_csv('./sc_notebooks/Pandas/nuevosPacientes.csv') #Base de datos con nuevos pacientes\n",
         "datosPacientes = pd.concat([datosPacientes,nuevosPacientes],ignore_index=True)"
       ]
     },
@@ -2046,7 +2046,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientesNan = pd.read_csv('pacientesCorazonNaN.csv')\n",
+        "datosPacientesNan = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazonNaN.csv')\n",
         "datosPacientesNan"
       ]
     },
@@ -2224,7 +2224,7 @@
       },
       "outputs": [],
       "source": [
-        "datosPacientes = pd.read_csv('pacientesCorazon.csv')\n",
+        "datosPacientes = pd.read_csv('./sc_notebooks/Pandas/pacientesCorazon.csv')\n",
         "datosPacientes.columns = ['edad', 'sexo', 'tipoDolor', 'presionReposo', 'colesterolSerico','azucarAyunas', 'latidosMax','presencia']\n",
         "datosPacientes\n",
         "\n"
