--- a/Numpy/NumpyEval.ipynb
+++ b/Numpy/NumpyEval.ipynb
@@ -1,1 +1,169 @@
-{"cells":[{"cell_type":"code","execution_count":null,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":18961,"status":"ok","timestamp":1702328187042,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"-oBQ0YjpoIpU","outputId":"41dcaef4-95b7-41db-d194-a51a2c6ef9ad"},"outputs":[{"name":"stdout","output_type":"stream","text":["Mounted at /content/drive\n"]}],"source":["# celda para acceder a archivos en Google Drive\n","from google.colab import drive\n","drive.mount('/content/drive')"]},{"cell_type":"markdown","metadata":{"id":"BCS0l7SbrORr"},"source":["# Evaluación: NumPy y SciPy\n","\n","## <font color='purple'>**Ejercicio 1**</font>\n","\n"]},{"cell_type":"code","execution_count":2,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":215,"status":"ok","timestamp":1702852453752,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"HlS8yAFyaSaD","outputId":"0242eb4b-ae94-456f-dc98-bd813ac5021f"},"outputs":[{"name":"stdout","output_type":"stream","text":["[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14]\n"]}],"source":["import numpy as np\n","numbers = np.arange(15)\n","print(numbers)\n","\n","# Del arreglo \"numbers\" extraiga los últimos dos elementos\n","\n","# Del arreglo \"numbers\" extraiga todos los números excepto los últimos dos elementos\n","\n","# Obtenga de \"numbers\", a partir del segundo elemento, los elementos cada 2 posiciones (Por ejemplo: [0 1 2 3 4 5 6 7 8] -> [1 3 5 7])"]},{"cell_type":"code","execution_count":3,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":192,"status":"ok","timestamp":1702852673225,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"17N62rpEq03x","outputId":"e767d090-2c73-4ca5-9773-eab5d0099a37"},"outputs":[{"name":"stdout","output_type":"stream","text":["últimos dos elementos: [13 14]\n","todos excepto los últimos dos: [ 0  1  2  3  4  5  6  7  8  9 10 11 12]\n","cada dos posiciones: [ 1  3  5  7  9 11 13]\n"]}],"source":["print('últimos dos elementos:', numbers[-2:])\n","print('todos excepto los últimos dos:', numbers[:-2])\n","print('cada dos posiciones:', numbers[1::2])"]},{"cell_type":"code","execution_count":4,"metadata":{"id":"dMlplAutj4mK"},"outputs":[],"source":["import numpy as np"]},{"cell_type":"code","execution_count":5,"metadata":{"id":"-9RyWr0HY3jJ"},"outputs":[],"source":["#Crear un arreglo de NumPy a partir de una lista de números de Python\n","\n","#Crear un arreglo 1D de NumPY con 10 números flotantes (con decimales dtype=float) inicializada con ceros\n","\n","#Crear un arreglo 2D de NumPy con forma 3x3 con números flotantes\n","\n","#Crear un arreglo con 12 números aleatorios\n"]},{"cell_type":"code","execution_count":6,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":214,"status":"ok","timestamp":1702853868956,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"e9M8UUk-80Mw","outputId":"cccc25a6-c71e-42ab-bd3d-93899fb976af"},"outputs":[{"name":"stdout","output_type":"stream","text":["arreglo 1: [1 2 3 4 5]\n","arreglo 2: [0.   0.11 0.22 0.33 0.44 0.55 0.66 0.77 0.88 0.99]\n","arreglo 3: \n"," [[1. 2. 3.]\n"," [4. 5. 6.]\n"," [7. 8. 9.]]\n","arreglo 4: [0.39414633 0.05193371 0.71382262 0.24870904 0.67798918 0.62375227\n"," 0.95206496 0.09761107 0.68249324 0.76519134 0.61133267 0.51333969]\n"]}],"source":["lista1=[1,2,3,4,5]\n","ar1=np.array(lista1)\n","print('arreglo 1:', ar1)\n","\n","ar2=np.linspace(0,0.99,10)\n","print('arreglo 2:', ar2)\n","\n","ar3=np.array([[1.,2,3],[4,5,6],[7,8,9]])\n","print('arreglo 3: \\n', ar3,)\n","\n","ar4=np.random.random(12)\n","print('arreglo 4:', ar4)"]},{"cell_type":"code","execution_count":7,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":6,"status":"ok","timestamp":1702853881866,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"SvM-7wMHfwa8","outputId":"1a049ae5-c7b1-4979-dc6b-8163916ac06c"},"outputs":[{"data":{"text/plain":["array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n","       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n","       34, 35])"]},"execution_count":7,"metadata":{},"output_type":"execute_result"}],"source":["import numpy as np\n","arrayToMatrix = np.arange(36)\n","arrayToMatrix\n","# Convierta el arreglo arrayToMatrix a una matrix de forma 6x6\n","\n","# Utilizando indexacion, extraiga la tercera fila de la matriz resultante (recuerde que se indexa a partir de 0)\n","\n","# Utilizando slicing extraiga los elementos 14, 15, 20, 21 en una matrix 2x2\n"]},{"cell_type":"code","execution_count":8,"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"elapsed":188,"status":"ok","timestamp":1702854414867,"user":{"displayName":"Luis","userId":"05605313541880881378"},"user_tz":360},"id":"04YT483FAEUs","outputId":"99840226-fb3e-461f-a791-4c3b40e7be23"},"outputs":[{"name":"stdout","output_type":"stream","text":["Matriz generada a partir del arreglo: \n"," [[ 0  1  2  3  4  5]\n"," [ 6  7  8  9 10 11]\n"," [12 13 14 15 16 17]\n"," [18 19 20 21 22 23]\n"," [24 25 26 27 28 29]\n"," [30 31 32 33 34 35]] \n","\n","Segunda fila extraída:  [12 13 14 15 16 17] \n","\n","Elementos específicos: \n"," [[14 15]\n"," [20 21]]\n"]}],"source":["matriz=arrayToMatrix.reshape([6,6])\n","print('Matriz generada a partir del arreglo: \\n', matriz, '\\n')\n","\n","print('Segunda fila extraída: ' ,matriz[2,:], '\\n')\n","\n","slice=matriz.copy()[2:4,2:4]\n","print('Elementos específicos: \\n', slice)"]}],"metadata":{"colab":{"provenance":[]},"kernelspec":{"display_name":"Python 3","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.11.8"}},"nbformat":4,"nbformat_minor":0}
+{
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-oBQ0YjpoIpU"
+      },
+      "outputs": [],
+      "source": [
+        "# celda para acceder a archivos en Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BCS0l7SbrORr"
+      },
+      "source": [
+        "# Evaluación: NumPy y SciPy\n",
+        "\n",
+        "## <font color='purple'>**Ejercicio 1**</font>\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "HlS8yAFyaSaD"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "numbers = np.arange(15)\n",
+        "print(numbers)\n",
+        "\n",
+        "# Del arreglo \"numbers\" extraiga los últimos dos elementos\n",
+        "\n",
+        "# Del arreglo \"numbers\" extraiga todos los números excepto los últimos dos elementos\n",
+        "\n",
+        "# Obtenga de \"numbers\", a partir del segundo elemento, los elementos cada 2 posiciones (Por ejemplo: [0 1 2 3 4 5 6 7 8] -> [1 3 5 7])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "17N62rpEq03x"
+      },
+      "outputs": [],
+      "source": [
+        "print('últimos dos elementos:', numbers[-2:])\n",
+        "print('todos excepto los últimos dos:', numbers[:-2])\n",
+        "print('cada dos posiciones:', numbers[1::2])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "dMlplAutj4mK"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-9RyWr0HY3jJ"
+      },
+      "outputs": [],
+      "source": [
+        "#Crear un arreglo de NumPy a partir de una lista de números de Python\n",
+        "\n",
+        "#Crear un arreglo 1D de NumPY con 10 números flotantes (con decimales dtype=float) inicializada con ceros\n",
+        "\n",
+        "#Crear un arreglo 2D de NumPy con forma 3x3 con números flotantes\n",
+        "\n",
+        "#Crear un arreglo con 12 números aleatorios\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "e9M8UUk-80Mw"
+      },
+      "outputs": [],
+      "source": [
+        "lista1=[1,2,3,4,5]\n",
+        "ar1=np.array(lista1)\n",
+        "print('arreglo 1:', ar1)\n",
+        "\n",
+        "ar2=np.linspace(0,0.99,10)\n",
+        "print('arreglo 2:', ar2)\n",
+        "\n",
+        "ar3=np.array([[1.,2,3],[4,5,6],[7,8,9]])\n",
+        "print('arreglo 3: \\n', ar3,)\n",
+        "\n",
+        "ar4=np.random.random(12)\n",
+        "print('arreglo 4:', ar4)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "SvM-7wMHfwa8"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "arrayToMatrix = np.arange(36)\n",
+        "arrayToMatrix\n",
+        "# Convierta el arreglo arrayToMatrix a una matrix de forma 6x6\n",
+        "\n",
+        "# Utilizando indexacion, extraiga la tercera fila de la matriz resultante (recuerde que se indexa a partir de 0)\n",
+        "\n",
+        "# Utilizando slicing extraiga los elementos 14, 15, 20, 21 en una matrix 2x2\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "04YT483FAEUs"
+      },
+      "outputs": [],
+      "source": [
+        "matriz=arrayToMatrix.reshape([6,6])\n",
+        "print('Matriz generada a partir del arreglo: \\n', matriz, '\\n')\n",
+        "\n",
+        "print('Segunda fila extraída: ' ,matriz[2,:], '\\n')\n",
+        "\n",
+        "slice=matriz.copy()[2:4,2:4]\n",
+        "print('Elementos específicos: \\n', slice)"
+      ]
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.8"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
