--- a/Pandas/pandas.ipynb
+++ b/Pandas/pandas.ipynb
@@ -43,7 +43,7 @@
         "id": "LrUGkQ4KWUlt",
         "outputId": "40e95ee8-9016-4124-e414-3d15119c531b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -699,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1332,7 +1332,7 @@
       },
       "outputs": [],
       "source": [
-        "nuevosPacientes = pd.read_csv('nuevosPacientes.csv') #Base de datos con nuevos pacientes\n",
+        "nuevosPacientes = pd.read_csv('./sc_notebooks/Pandas/nuevosPacientes.csv') #Base de datos con nuevos pacientes\n",
         "\n",
         "datosPacientes = pd.concat([datosPacientes,nuevosPacientes],ignore_index=True)\n",
         "\n",
@@ -1472,7 +1472,7 @@
         "import pandas as pd\n",
         "\n",
         "SIRnames = [\"Susceptibles\", \"Infectados\", \"Recuperados\"]\n",
-        "modelosir = pd.read_csv(\"modeloSIR.csv\", names=SIRnames)\n",
+        "modelosir = pd.read_csv(\"./sc_notebooks/Pandas/modeloSIR.csv\", names=SIRnames)\n",
         "\n",
         "modelosir[\"tiempo\"] = pd.Series(np.linspace(0, 240, num=100))\n",
         "\n",
